<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_baby_spa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c4dba8"
    android:orientation="vertical"
    tools:context="com.example.keyalive.kliniknamira.program.Baby_spa">
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="80dp"
     app:cardElevation="10dp"
     android:background="#66625f"
     android:id="@+id/cardView">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="BABY SPA"

         fontPath="fonts/JosefinSans-SemiBold.ttf"
         tools:ignore="MissingPrefix"
         android:layout_gravity="center_vertical"
         android:gravity="center_horizontal"
         android:textSize="25sp"
         android:textColor="#c4dba8"
         />
 </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:cardElevation="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="7dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="#ffffff">
        <TextView
            android:textSize="16.5dp"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:textColor="#000"
            fontPath="fonts/JosefinSans-Regular.ttf"
            tools:ignore="MissingPrefix"
            android:gravity="center"
            android:text="@string/des_spa"/>
    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Manfaat"
        android:textColor="#ffff"
        android:layout_gravity="center_vertical"
        fontPath="fonts/JosefinSans-SemiBold.ttf"
        tools:ignore="MissingPrefix"
        android:gravity="center_horizontal"
        android:textSize="23sp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/Baby_Spa1"
                    android:textSize="20sp"
                    android:gravity="center"
                    fontPath="fonts/JosefinSans-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:layout_gravity="center"
                    android:textColor="#030303"></TextView>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    fontPath="fonts/JosefinSans-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:text="@string/Baby_Spa2"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#030303"

                    />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    fontPath="fonts/JosefinSans-Regular.ttf"
                    tools:ignore="MissingPrefix"
android:text="@string/Baby_Spa3"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#030303"

                    />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#ffffff">

                <TextView
                    android:layout_width="wrap_content"
                    fontPath="fonts/JosefinSans-Regular.ttf"
                    tools:ignore="MissingPrefix"

                    android:layout_height="70dp"
android:text="@string/Baby_Spa4"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#030303"

                    />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
android:text="@string/Baby_Spa5"                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    fontPath="fonts/JosefinSans-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:textColor="#030303"

                    />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="@string/Baby_Spa6"
                    android:layout_gravity="center"
                    fontPath="fonts/JosefinSans-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:textColor="#030303"

                    />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    fontPath="fonts/JosefinSans-Regular.ttf"
                    tools:ignore="MissingPrefix"
android:text="@string/Baby_Spa7"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#030303"

                    />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    fontPath="fonts/JosefinSans-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:layout_height="70dp"
android:text="@string/Baby_Spa8"                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#030303"

                    />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="#ffff"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    fontPath="fonts/JosefinSans-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:layout_height="70dp"
android:text="@string/Baby_Spa9"                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="#030303"

                    />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
android:text="@string/Baby_Spa10"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_gravity="center"

                    fontPath="fonts/JosefinSans-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:textColor="#030303"

                    />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#ffffff">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
android:text="@string/Baby_Spa11"
                    android:textSize="20sp"
                    android:gravity="center"
                    fontPath="fonts/JosefinSans-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:layout_gravity="center"
                    android:textColor="#030303"

                    />

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
