<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_klinik_namira"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#91c4e9"

    tools:context="com.example.keyalive.kliniknamira.about.KlinikNamira"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardElevation="10dp"
        android:background="#66625f">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pengembang"
            android:gravity="center"
            android:textColor="#91c4e9"
            android:layout_gravity="center_vertical"
            fontPath="fonts/JosefinSans-SemiBold.ttf"
            tools:ignore="MissingPrefix"
            android:textSize="25sp"
            android:id="@+id/textView3" />
    </android.support.v7.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="#ffffff">
        <TextView
            android:textSize="14.5dp"
            fontPath="fonts/JosefinSans-Regular.ttf"
            tools:ignore="MissingPrefix"
            android:layout_width="260dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:gravity="center"
            android:text="@string/tujuan"/>


    </android.support.v7.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pengembang"
        android:textSize="20dp"
        fontPath="fonts/JosefinSans-SemiBold.ttf"
        tools:ignore="MissingPrefix"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

    <android.support.v7.widget.CardView
        fontPath="fonts/JosefinSans-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"

        android:layout_marginTop="10dp"
        android:layout_weight="0.04"
        app:cardBackgroundColor="#ffffff"
        app:cardCornerRadius="10dp"
        tools:ignore="MissingPrefix">

        <TextView
            android:layout_width="120dp"
            android:layout_height="160dp"
            android:background="@drawable/ginanjar"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="320dp"
        android:layout_height="140dp"
        android:layout_marginLeft="20dp"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="10dp"
        android:layout_marginBottom="20dp"
        app:cardBackgroundColor="#ffffff">
        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            fontPath="fonts/JosefinSans-Regular.ttf"
            tools:ignore="MissingPrefix"
            android:layout_gravity="center_horizontal"
            android:gravity="top"
            android:text="@string/ginanjar"/>
        <TextView
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            fontPath="fonts/JosefinSans-Regular.ttf"
            tools:ignore="MissingPrefix"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/alamat_ginanjar"/>
        <TextView
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            fontPath="fonts/JosefinSans-Regular.ttf"
            tools:ignore="MissingPrefix"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="85dp"
            android:gravity="center"
            android:text="@string/upgris"/>

    </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
